[gd_scene load_steps=9 format=3 uid="uid://c3n83t6gp5c5t"]

[ext_resource type="Script" uid="uid://bggrkw3quo5r3" path="res://scripts/objects/armadilhas/flamethrower.gd" id="1_b7ev4"]
[ext_resource type="Texture2D" uid="uid://gbgief32i1qj" path="res://assets/2D Pixel Dungeon Asset Pack/items and trap_animation/flamethrower/flamethrower_1_4.png" id="2_2ay5i"]
[ext_resource type="Texture2D" uid="uid://bowunkhrstcqm" path="res://assets/2D Pixel Dungeon Asset Pack/items and trap_animation/flamethrower/flamethrower_1_1.png" id="3_3frn4"]
[ext_resource type="Texture2D" uid="uid://11d0idmjnox0" path="res://assets/2D Pixel Dungeon Asset Pack/items and trap_animation/flamethrower/flamethrower_1_2.png" id="4_30wf2"]
[ext_resource type="Texture2D" uid="uid://bp8d703aefmya" path="res://assets/2D Pixel Dungeon Asset Pack/items and trap_animation/flamethrower/flamethrower_1_3.png" id="5_xgl0g"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tu0hb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2ay5i")
}, {
"duration": 1.0,
"texture": ExtResource("3_3frn4")
}, {
"duration": 1.2,
"texture": ExtResource("4_30wf2")
}, {
"duration": 1.0,
"texture": ExtResource("5_xgl0g")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b7ev4"]
size = Vector2(16, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ay5i"]
size = Vector2(16, 22)

[node name="flamethrower" type="Node2D"]
script = ExtResource("1_b7ev4")

[node name="sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tu0hb")

[node name="activate_box" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="activate_box"]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_b7ev4")

[node name="damage_box" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage_box"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_2ay5i")
disabled = true

[connection signal="body_entered" from="activate_box" to="." method="_on_activate_box_body_entered"]
[connection signal="body_entered" from="damage_box" to="." method="_on_damage_box_body_entered"]
